--- a/CargaSaldoQR/package.json
+++ b/CargaSaldoQR/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CargaSaldoQR",
+  "name": "Carga Saldo QR",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -24,7 +24,6 @@
     "@capacitor/core": "2.0.1",
     "@ionic-native/barcode-scanner": "^5.23.0",
     "@ionic-native/core": "^5.0.7",
-    "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
@@ -44,6 +43,7 @@
     "@angular/language-service": "~8.2.14",
     "@capacitor/cli": "2.0.1",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "3.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
